# Doc-Genie

./: .gitignore  Dockerfile  README.md  appv2.py  delete_docs.py  delete_queue.txt  deletion_attempt.txt  deletion_log.txt  deletion_queue_log.txt  deletion_status.json  env_variables.txt  environment.yml  pyproject.toml  requirement.txt  rough.py
chroma_db/: chroma.sqlite3  chroma.sqlite3-journal
chroma_index/: docstore.json  index_store.json
