[project]
name = "ragapppoc"
version = "0.1.0"
description = ""
authors = [
    {name = "404ajayreddy", email = "arg4644@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit>=1.32.0",
    "streamlit-chat>=0.1.1",
    "streamlit-authenticator>=0.3.1",
    "ollama>=0.1.6",
    "chromadb>=0.4.22",
    "pandas>=2.2.0",
    "numpy>=1.24.0",
    "llama-index>=0.10.1",
    "sentence-transformers>=2.5.1",
    "scikit-learn>=1.4.0",
    "PyMuPDF>=1.23.26",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.1",
    "transformers>=4.36.0",
    "torch>=2.2.0",
    "openai>=1.12.0",
    "llama-index-embeddings-huggingface (>=0.5.1,<0.6.0)",
    "llama-index-vector-stores-chroma (>=0.4.1,<0.5.0)",
    "llama-index-llms-openai (>=0.3.20,<0.4.0)",
    "llama-index-llms-ollama (>=0.5.2,<0.6.0)"
]

[project.optional-dependencies]
dev = [
    "black>=24.1.0",
    "flake8>=7.0.0",
    "pytest>=8.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"